fix: mobile lightbox scrollbar bg

--- a/src/scss/includes/components/lightbox/_lightbox-styles.scss
+++ b/src/scss/includes/components/lightbox/_lightbox-styles.scss
@@ -558,17 +558,6 @@
             padding-bottom: 8px;
             margin-bottom: -8px;
 
-            &::before {
-                content: "";
-                display: block;
-                position: absolute;
-                width: 100%;
-                height: 44px;
-                left: 0;
-                top: 0;
-                background-color: var(--main-body-color);
-            }
-
 
             &::-webkit-scrollbar {
                 display: none;
@@ -604,6 +593,17 @@
                 gap: vw(56, phone);
                 padding-inline: vw(38, phone);
                 background: var(--main-body-color);
+
+                &::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    width: 100%;
+                    height: 44px;
+                    left: 0;
+                    bottom: 100%;
+                    background-color: var(--main-body-color);
+                }
 
                 &::after {
                     content: "";
